@@ -1,5 +1,6 @@
 Version 5.7.0 (TBD)
-    Added video and audio live embed support for the `media` plugin #TINY-6229
+    Added `video` and `audio` live embed support for the `media` plugin #TINY-6229
+    Added the ability to resize `video` and `iframe` media elements #TINY-6229
     Changed the `advlist` plugin to log a console error message when the `list` plugin isn't enabled #TINY-6585
 Version 5.6.1 (2020-11-25)
     Fixed the `mceTableRowType` and `mceTableCellType` commands were not firing the `newCell` event #TINY-6692
